# vae-marketing

./: .geminiignore  .gitignore  GEMINI.md  README.md  TODO.md  create_sample.py  environment.yml  feature.txt  generate_plots.py  main.py  package-lock.json  portfolio-export.md  pyproject.toml  sweep.yaml
.github/workflows/: notify-portfolio.yml
docs/: MARKETING_GUIDE.md  SAMPLE_REPORT.md
specs/001-consumer-behavior-impact/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-consumer-behavior-impact/checklists/: requirements.md
specs/001-consumer-behavior-impact/contracts/: pipeline_api.md
specs/002-data-preparation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-data-preparation/checklists/: requirements.md
specs/003-disentangled-vae-wandb/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/data/: __init__.py  data_preparation.py  dataset.py  extractors.py  normalizers.py  prepare.py  schema.py
src/models/: __init__.py  baseline_vae.py  beta_vae.py  factory.py  vae.py
src/services/: baseline.py  impact_analysis.py  reporting.py  reporting_baseline.py  reporting_beta.py
src/utils/: metrics.py  seed.py  wandb_logger.py
tests/: conftest.py
tests/integration/: test_beta_trainer.py  test_pipeline.py  test_pipeline_end_to_end.py  test_reporting_beta.py
tests/unit/: test_baseline.py  test_beta_vae.py  test_data_prep.py  test_impact_analysis.py  test_metrics.py  test_normalizers.py  test_reporting.py  test_vae.py
(+3 files in other folders)
