[project]
name = "vae_marketing"
version = "0.1.0"
description = "Impact of External Stimuli on Consumer Purchase Flows"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "D",  # pydocstyle
    "ANN" # flake8-annotations (type hints)
]
ignore = [
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring
    "D212",   # Multi-line docstring summary should start at the first line
    "ANN401"  # Dynamically typed expressions (typing.Any) are disallowed
]

[tool.ruff.lint.pydocstyle]
convention = "google"
